Abstract usages of IndexSearcher ()